Fix issue where pieces in pool jump after being placed on board by cloning the odel earlier in the placePieceOnBoard method

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -48,6 +48,11 @@ h2 {
     top: 50px;
 }
 
+.message-container {
+    margin-right: 150px;
+    margin-left: 50%;
+    transform: translateX(-50%);
+}
 #piece-pool {
     box-sizing: border-box;
     height: 600px;
@@ -97,6 +102,7 @@ h2 {
         canvas {
             margin-top: 5px;
             border: 2px solid black;
+            border-radius: 15px;
         }
     }
 }
